# minimum-dependency-generator

./: .coveragerc  .gitignore  Dockerfile  Makefile  README.md  action.yml  compare.sh  main.py  other-requirements.txt  pyproject_example.toml  requirements.txt  setup.cfg  setup_example.cfg  test-requirements.txt
.github/workflows/: correct-min-requirements.txt  integration_tests.yml  lint_check.yml  unit_tests.yml
minimum_dependency_generator/: __init__.py  main.py  minimum_dependency_generator.py  utils.py
minimum_dependency_generator/tests/: conftest.py  example_setup.cfg  test_cfg_toml.py  test_helpers.py  test_minimum_dependency_generator.py  test_pyproject_toml.py  test_requirements_text_files.py  test_setup_cfg.py  test_utils.py
