[metadata]
description-file = README.md
[tool:pytest]
addopts = --doctest-modules
python_files = minimum_dependency_generator/tests/*
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
[aliases]
test=pytest
[isort]
multi_line_output=3
known_third_party=packaging,pytest
known_first_party=minimum_dependency_generator